--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
