--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "serve-favicon": "^2.5.0"
   }
 }
